--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.7",
     "@wagmi/connectors": "^5.8.5",
     "@wagmi/core": "^2.17.3",
     "@web3modal/ethereum": "^2.7.1",
