--- a/package.json
+++ b/package.json
@@ -13,17 +13,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
-    "@wagmi/connectors": "^5.8.5",
-    "@wagmi/core": "^2.17.3",
-    "@web3modal/ethereum": "^2.7.1",
     "@web3modal/wagmi": "^5.1.11",
-    "ethers": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "viem": "^2.31.2",
     "wagmi": "^2.15.6",
-    "web3": "^4.16.0",
-    "web3modal": "^1.9.12"
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
